--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novel Nexus - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
     <header>
@@ -15,10 +15,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="products.html">Books & Features</a></li>
-                    <li><a href="login.html">Login/Sign Up</a></li>
+                    <li><a href="/assets/index.html">Home</a></li>
+                    <li><a href="/assets/about.html">About Us</a></li>
+                    <li><a href="/assets/products.html">Books & Features</a></li>
+                    <li><a href="/assets/login.html">Login/Sign Up</a></li>
                 </ul>
             </nav>
         </div>
