--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="/assets/index.html">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/assets/about.html">About Us</a></li>
                     <li><a href="/assets/products.html">Books & Features</a></li>
                     <li><a href="/assets/login.html">Login/Sign Up</a></li>
