--- a/assets/login.html
+++ b/assets/login.html
@@ -28,7 +28,7 @@
         <section class="login-signup-container">
             <div class="form-toggle-buttons">
                 <button id="showLoginBtn" class="toggle-button active">Login</button>
-                <button id="showSignupBtn" class="toggle-button">Sign Up</button>
+                <button id="showSignupBtn" class="toggle-button" href="products.html">Sign Up</button>
             </div>
 
             <form id="loginForm" class="auth-form active">
