--- a/assets/products.html
+++ b/assets/products.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="C:\Users\Kim Arianne\OneDrive - feutech.edu.ph\Pictures\Screenshots\novel nexus.png" class="logo-img">
+                <img src="https://gemini.google.com/app/e955129c1a62938e?is_sa=1&is_sa=1&android-min-version=301356232&ios-min-version=322.0&campaign_id=bkws&utm_source=sem&utm_source=google&utm_medium=paid-media&utm_medium=cpc&utm_campaign=bkws&utm_campaign=2024enPH_gemfeb&pt=9008&mt=8&ct=p-growth-sem-bkws&gad_source=1&gclid=Cj0KCQiAouG5BhDBARIsAOc08RSVF8Gf-jsnL0kghzfh5tV8eBTc2qiZrO4wW_-E_Qpxfkh_cZKF1U8aAtmZEALw_wcB&gclsrc=aw.ds" class="logo-img">
                 <h1 class="logo-text">Novel Nexus</h1>
             </div>
             <nav>
